cluster001/namespaces/project001/project001.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project001.yaml
spec: {}
status: {}
